feat: products module
